2016-06-15  Niibe Yutaka  <gniibe@fsij.org>

	* src/neug.ld.in (__process2_stack_size__): Smaller value.

2016-06-14  Niibe Yutaka  <gniibe@fsij.org>

	* src/neug.ld.in (__process3_stack_size__): Larger value.

	* fraucheky: Update to 0.4.

	* src/main.c (usb_ctrl_write_finish): Support
	MSC_MASS_STORAGE_RESET_COMMAND.

	* tool/neug_check.py (main): "Board" is optional.
	Reported by Kenji Rikitake.

	* src/configure: Fix use_sys3 variable substitution.

2016-06-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c: Update with new USB API.

2016-06-01  NIIBE Yutaka  <gniibe@fsij.org>

	* tool/neug_upgrade.py (regnual.__init__): Don't call
	setAltInterface since we have no alternative.

2016-05-31  NIIBE Yutaka  <gniibe@fsij.org>

	* src/main.c (main): Don't call fraucheky_main until configured.

	* chopstx: Update to 0.12.

	* src/main.c (usb_cb_get_descriptor): sys_board_name is only
	available in newer SYS.

2016-05-30  NIIBE Yutaka  <gniibe@fsij.org>

	* src/main.c (usb_cb_tx_done, usb_cb_rx_ready): Fix for Fraucheky.

	* fraucheky: Update.

	* chopstx: Update.

	* src/stm32f103.h, src/usb_stm32f103.c: Remove.
	* src/adc_stm32f103.c, src/aes-constant-ft.c: Remove
	* src/sys.c, src/sys.h: Remove.
	* neug.ld.in, Makefile.in: Use SYS, USB, ADC in Chopstx.

2016-05-27  NIIBE Yutaka  <gniibe@fsij.org>

	* src/adc_stm32f103.c (adc_intr): Define in this module.
	(adc_init): Claim IRQ here.
	(adc_wait_completion): Don't expose INTR.

	* src/neug.c (INTR_REQ_DMA1_Channel1): Remove.
	(rng): Follow the change of ADC API.

2016-05-26  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx: Update.
	* src/adc.h: Update from Gnuk.
	* src/neug.c: Update from Gnuk.
	* src/usb_stm32f103.c: Update from Chopstx.
	* src/usb_lld.h: Update from Chopstx.
	* src/sys.c: Update from Chopstx.
	* src/configure: Follow the change of USB API.
	* src/main.c (usb_cb_device_reset, usb_cb_ctrl_write_finish)
	(vcom_port_data_setup, usb_cb_setup, usb_cb_get_descriptor)