@@ -1,3 +1,8 @@
+2016-07-13  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/neug.c (neug_init): Apply change for STACK_ADDR_* from Gnuk.
+	* src/main.c (main): Likewise.
+
 2016-06-15  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/neug.ld.in (__process2_stack_size__): Smaller value.
